moves assets folder and trying to get download and image to work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
   <div class="container header-inner">
     <a routerLink="/" class="brand" aria-label="Code By Lissa home">
       <div class="brand-mark" aria-hidden="true">
-        <img src="../assets/Code_By_Lissa_Logo.png" alt="Code By Lissa Logo" />
+        <img
+          src="assets/images/Code_By_Lissa_Logo.png"
+          alt="Code By Lissa Logo" />
       </div>
       <div class="brand-text">
         <span class="brand-title">Code By Lissa</span>
