--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -6,8 +6,11 @@
     </p>
 
     <div class="resume-actions">
-      <a class="btn primary-btn" [href]="resumeDownloadUrl" download>
-        Download Resume (PDF)
+      <a
+        class="btn primary-btn"
+        [href]="resumeDownloadUrl"
+        download="Melissa_Lutz_Resume.pdf">
+        Download Melissa Lutz's Resume (PDF)
       </a>
     </div>
   </header>
