rpg character maker done updated some colors for more contrast

--- a/src/app/pages/rpg-demo/rpg-demo.component.html
+++ b/src/app/pages/rpg-demo/rpg-demo.component.html
@@ -4,7 +4,10 @@
     <h1>RPG Character Maker Demo</h1>
     <p>
       Full Angular SPA running inside an iframe. Built with routing, reactive
-      forms, and TypeScript services to manage players and characters.
+      forms, and TypeScript services to manage players and characters.<br />
+      &nbsp;&nbsp; &nbsp; Use the below to log in to the site.<br />
+      User Name: admin<br />
+      Password: admin123
     </p>
 
     <a
